methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:7: error: '{' expected but '(' found.
        k match(){
               ^